@@ -20,7 +20,6 @@ package com.tencent.cloud.polaris.router.feign;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -46,13 +45,14 @@ import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
 
+import static com.tencent.cloud.common.constant.ContextConstant.UTF_8;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 /**
- * test for {@link RouterLabelFeignInterceptor}
- * @author lepdou 2022-05-26
- * @author cheese8 2022-06-20
+ * test for {@link RouterLabelFeignInterceptor}.
+ *
+ * @author lepdou, cheese8
  */
 @RunWith(MockitoJUnitRunner.class)
 public class RouterLabelFeignInterceptorTest {
@@ -123,10 +123,10 @@ public class RouterLabelFeignInterceptorTest {
 				Map<String, String> routerLabelsMap = new HashMap<>();
 				try {
 					String routerLabelContent = routerLabels.stream().findFirst().get();
-					routerLabelsMap.putAll(JacksonUtils.deserialize2Map(URLDecoder.decode(routerLabelContent, StandardCharsets.UTF_8.name())));
+					routerLabelsMap.putAll(JacksonUtils.deserialize2Map(URLDecoder.decode(routerLabelContent, UTF_8)));
 				}
 				catch (UnsupportedEncodingException e) {
-					throw new RuntimeException("unsupported charset exception " + StandardCharsets.UTF_8.name());
+					throw new RuntimeException("unsupported charset exception " + UTF_8);
 				}
 
 				Assert.assertNotNull(routerLabels);
@@ -139,5 +139,4 @@ public class RouterLabelFeignInterceptorTest {
 			}
 		}
 	}
-
 }
